dpkg (1.15.8) UNRELEASED; urgency=low

  [ Updated programs translations ]
  * Russian (Yuri Kozlov). Closes: #579149

  [ Updated man page translations ]
  * German (Helge Kreutzmann).
  * Russian (Yuri Kozlov). Closes: #579149

  [ Updated scripts translations ]
  * French (Christian Perrier).
  * German (Helge Kreutzmann).
  * Russian (Yuri Kozlov). Closes: #579149

 -- Guillem Jover <guillem@debian.org>  Wed, 21 Apr 2010 04:40:12 +0200

dpkg (1.15.7.1) unstable; urgency=low

  * Fix dpkg-source -b (without -i) for source packages 1.0. Closes: #578693
    It was erroneously ignoring all changes because the ignore regex was
    wrong (due to the change to ignore debian/source/local-options).
  * Add missing call to textdomain() in dpkg-mergechangelogs to make
    translations work.

 -- Raphaël Hertzog <hertzog@debian.org>  Thu, 22 Apr 2010 08:05:20 +0200

dpkg (1.15.7) unstable; urgency=low

  [ Raphaël Hertzog ]
  * Clarify the plan concerning dpkg-source, debian/source/format and
    the default source format in dpkg-source(1). Add a warning
    in dpkg-source to invite people to always create debian/source/format.
    We deprecate the fallback to "1.0" (it's there for backwards compatibility
    only) and debian/source/format is going to be mandatory at some point in
    the future. Closes: #553928
  * Add .gitattributes to list of files ignored by dpkg-source.
  * Document most common warnings and errors of dpkg-source in its manual
    page.
  * Let dpkg-source read options from debian/source/local-options as well but
    do not include that file in the generated source package.
  * Improve explanation of --all option in dpkg-parsechangelog(1). Thanks to
    Jari Aalto. Closes: #575706
  * Fix dpkg to not lose package metadata on filesystems where readdir()
    returns new files added after the opendir() call, btrfs in particular
    triggered the problematic behaviour. Closes: #575891
  * Tigthen the regex used by dpkg-source to match the component name of