@@ -1,5 +1,12 @@
 dpkg (1.15.8) UNRELEASED; urgency=low
 
+  [ Raphaël Hertzog ]
+  * Add new commands --before-build and --after-build to dpkg-source
+    and modify dpkg-buildpackage to call them automatically at the
+    start and at the end of the process. With "3.0 (quilt)" source packages
+    this ensures patches are applied even in case of binary-only builds.
+    Closes: #572526
+
   [ Updated programs translations ]
   * Russian (Yuri Kozlov). Closes: #579149
 
